# OCR-Chess

./: .gitignore  LICENSE  README.md  capture_empty_squares.py  chess_engine.py  config.py  data_generator.py  download.py  main.py  ocr_utils.py  overlay.py  pyproject.toml  requirements.in  requirements.txt  screen_utils.py  train_cnn.py
.github/workflows/: update-dependencies.yml  update-requirements.yml
scripts/: capture_empty_squares.py  create_empty_squares.py  train_cnn.py
src/: config.py  overlay.py
src/data_handling/: data_generator.py
src/engine/: chess_engine.py
src/models/: cnn_definition.py
src/utils/: ocr_utils.py  screen_utils.py
